Fix avatar alignment in compact chat

--- a/ui/scss/component/_livestream-comment.scss
+++ b/ui/scss/component/_livestream-comment.scss
@@ -206,7 +206,9 @@
   }
 
   .livestream-comment--minimal {
-    margin-top: 1px;
+    .channel-thumbnail {
+      margin-top: 1px;
+    }
   }
 
   @media (max-width: $breakpoint-small) {
